Finished HTML layout, working on CSS.

--- a/index.html
+++ b/index.html
@@ -7,18 +7,49 @@
 	</head>
 	<body>
 		<header>
-			<img class="logo" alt="logo" src="#">
+			<p class="logo">Header Logo</p>
 			<ul class="nav-bar">
-			<li class="nav-link">Header link one</li>
-			<li class="nav-link">Header link two</li>
-			<li class="nav-link">Header link three</li>
+        <li class="nav-link">Header link one</li>
+        <li class="nav-link">Header link two</li>
+        <li class="nav-link">Header link three</li>
 			</ul>
-			<h1>This website is awesome</h1>
-      <p>
-			This website has some subtext that goes here under main title.
-			It's a smaller font and the color is smaller contrast.
-			</p>
-      <img class="header-img" alt="#" src="#">
-		</header>
+    </header>
+    <div class="part-1">
+      <div>
+        <h1>This website is awesome</h1>
+        <p>
+        This website has some subtext that goes here under main title.
+        It's a smaller font and the color is smaller contrast.
+        </p>
+        <button class="part-1-button">Sign up</button>
+      </div>
+      <img class="part-1-img" alt="empty" src="/empty.jpg" width="300px">
+		</div>
+    <div class="part-2">
+      <h2>Some random information.</h2>
+      <div class="cards">
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+      </div>
+    </div>
+    <div class="part-3">
+      <p>This is an inspiring quote, or a testimonial from a customer.
+        Maybe it's just filling up space, or maybe people will actually
+        read it. Who knows? All I know is that it looks nice.
+      </p>
+      <p>Some cool person</p>
+    </div>
+    <div class="part-4">
+      <div class="banner">
+        <p>Call to action! It's time!</p>
+        <p>Sugn up for our product by clicking that button right over there!</p>
+        <button class="part-4-button">Sign up</button>
+      </div>
+    </div>
+    <footer>
+      <p>05.11.22-xx.xx.xx</p>
+    </footer>
 	</body>
 </html>
