Webpage is ready

--- a/index.html
+++ b/index.html
@@ -6,50 +6,68 @@
 		<link rel="stylesheet" href="styles.css">
 	</head>
 	<body>
-		<header>
-			<p class="logo">Header Logo</p>
-			<ul class="nav-bar">
-        <li class="nav-link">Header link one</li>
-        <li class="nav-link">Header link two</li>
-        <li class="nav-link">Header link three</li>
-			</ul>
-    </header>
-    <div class="part-1">
-      <div>
-        <h1>This website is awesome</h1>
-        <p>
-        This website has some subtext that goes here under main title.
-        It's a smaller font and the color is smaller contrast.
-        </p>
-        <button class="part-1-button">Sign up</button>
+    <div class="dark-background">
+      <header>
+        <p class="logo">Header Logo</p>
+        <ul class="nav-bar">
+          <li class="nav-link">Header link one</li>
+          <li class="nav-link">Header link two</li>
+          <li class="nav-link">Header link three</li>
+        </ul>
+      </header>
+      <div class="part-1">
+        <div>
+          <h1>This website is awesome</h1>
+          <p>
+          This website has some subtext that goes here under main title.
+          It's a smaller font and the color is smaller contrast.
+          </p>
+          <button class="part-1-button">Sign up</button>
+        </div>
+        <img class="part-1-img" alt="empty" src="/empty.jpg">
       </div>
-      <img class="part-1-img" alt="empty" src="/empty.jpg" width="300px">
-		</div>
+    </div>
     <div class="part-2">
       <h2>Some random information.</h2>
       <div class="cards">
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
+        <div class="card">
+          <div class="part-2-img"></div>
+          <p>This is some text for an image or illustration</p>
+        </div>
+        <div class="card">
+          <div class="part-2-img"></div>
+          <p>This is some text for an image or illustration</p>
+        </div>
+        <div class="card">
+          <div class="part-2-img"></div>
+          <p>This is some text for an image or illustration</p>
+        </div>
+        <div class="card">
+          <div class="part-2-img"></div>
+          <p>This is some text for an image or illustration</p>
+        </div>
       </div>
     </div>
-    <div class="part-3">
-      <p>This is an inspiring quote, or a testimonial from a customer.
-        Maybe it's just filling up space, or maybe people will actually
-        read it. Who knows? All I know is that it looks nice.
-      </p>
-      <p>Some cool person</p>
+    <div class="grey-background">
+      <div class="part-3">
+        <p class="quote">This is an inspiring quote, or a testimonial from a customer.
+          Maybe it's just filling up space, or maybe people will actually
+          read it. Who knows? All I know is that it looks nice.
+        </p>
+        <p class="quote-author">-Some cool person</p>
+      </div>
     </div>
     <div class="part-4">
       <div class="banner">
-        <p>Call to action! It's time!</p>
-        <p>Sugn up for our product by clicking that button right over there!</p>
+        <div class="banner-left-part">
+          <p class="banner-first-p">Call to action! It's time!</p>
+          <p class="banner-second-p">Sign up for our product by clicking that button right over there!</p>
+        </div>
         <button class="part-4-button">Sign up</button>
       </div>
     </div>
     <footer>
-      <p>05.11.22-xx.xx.xx</p>
+      <p>05.11.22-08.11.22 Roman</p>
     </footer>
 	</body>
 </html>
